<resources>
    <string name="app_name">ParkingPlace</string>
    <string name="title_activity_map">Map</string>

    <string name="no">No</string>
    <string name="sure">Sure</string>
    <string name="oops">Ooops</string>
    <string name="location_disabled_message">Your Locations seems to be disabled, do you want to enable it?</string>
    <string name="btnReserveText">RESERVE</string>
    <string name="btnTakeText">TAKE</string>
    <string name="btnLeaveParkingPlaceText">LEAVE PARKING PLACE</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="prompt_car_registration_number">Car registration number</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_in_link"><b><u>Sign In</u></b></string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="sign_up_link"><b><u>Sign Up</u></b></string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="splash_screen">Splash Screen</string>

    <!-- <string name="PARKING_PLACE_SERVER_BASE_URL">https://parkingplaceserver.conveyor.cloud</string> -->
    <!-- <string name="PARKING_PLACE_SERVER_BASE_URL">https://parkingplaceserver-tm8.conveyor.cloud</string> -->
    <string name="PARKING_PLACE_SERVER_BASE_URL">https://192.168.1.2:45455</string>

    <string name="NAVIGATION_SERVICE_BASE_URL">http://www.yournavigation.org</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">parking place app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Reports</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_map_page">MapPage</string>
    <string name="menu_logout">Logout</string>

    <string name="home_second">Home Second</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_registration">Sign up</string>
    <string name="select_location_title">Select location</string>
    <string name="confirm_btn_text">Confirm</string>
    <string name="menu_favorite_places">FavoritePlaces</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="storage_settings_title">Save image in gallery</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="mock_location_title">Allow the use of mock location in this application</string>
    <string name="mapPageBtnTxt">MAP\nPAGE</string>
    <string name="registerUserBtnTxt">REGISTER\nUSER</string>
    <string name="favoritePlacesBtnTxt">FAVORITE\nPLACES</string>
    <string name="reservationAndPaidParkingPlacesBtnTxt">RESERVATION</string>
    <string name="reservationAndPaidParkingPlacesBtnTxtLand">RESERVATION</string>
    <string name="menu_reservation_and_paid_parking_places">ReservationAndPaidParking</string>
    <string name="location_types_title">Location Types</string>
    <string name="location_header">Location</string>
    <string name="storage_header">Storage</string>
    <string name="city_title">Select city</string>
    <string name="takeParkingPlaceNotificationText">Remaining time for taking of parking place:  5 min</string>
    <string name="takeParkingPlaceNotificationTitle">Soon expire taking of parking place</string>
    <string name="reserveParkingPlaceNotificationTitle">Remaining time for reservation of parking place:  1 min</string>
    <string name="reserveParkingPlaceNotificationText">Soon expire reservation of parking place</string>
    <string name="channel_name">NotificationReservationAndTaken</string>
    <string name="channel_description">Notification for expire reservation and taken parking place</string>

    <string name="report_description">Take photo and choose report type!</string>
    <string name="alert_open_camera">camera</string>
    <string name="alert_open_gallery">gallery</string>
    <string name="theme_header">Theme</string>
    <string name="theme_title">Select theme</string>
</resources>
