<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/location_header">
        <!--<ListPreference
            app:defaultValue="fused_location"
            app:entries="@array/location_types_entries"
            app:entryValues="@array/location_types_values"
            app:key="location_types"
            app:title="@string/location_types_title"
            app:useSimpleSummaryProvider="true" />-->

        <SwitchPreferenceCompat
            app:key="mock_location_allowed"
            app:title="@string/mock_location_title"
            app:defaultValue="true"/>

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/cities_entries"
            app:entryValues="@array/cities_values"
            app:key="city"
            app:title="@string/city_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/theme_header">
        <ListPreference
            app:defaultValue="light"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/storage_header">
        <SwitchPreferenceCompat
            app:key="saveImageInStorage"
            app:title="@string/storage_settings_title"
            app:defaultValue="true"/>
    </PreferenceCategory>

</PreferenceScreen>