<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
       <!-- <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />-->
        <item
            android:id="@+id/nav_map_page"
            android:icon="@drawable/baseline_map_24"
            android:title="@string/menu_map_page" />
        <item
            android:id="@+id/nav_favorite_places"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/menu_favorite_places" />
        <item
            android:id="@+id/nav_reservation_and_paid_parking_places"
            android:title="@string/menu_reservation_and_paid_parking_places" />
    </group>

    <group>
        <item
            android:title="@string/action_settings"
            android:icon="@drawable/baseline_settings_24"
            android:onClick="clickOnItemSettings"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout"
            android:onClick="clickOnItemLogout"/>
    </group>
</menu>
