<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rmj.parking_place.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <!--
        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
        -->
    </fragment>
    <!--
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.rmj.parking_place.actvities.main.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>
    -->
    <fragment
        android:id="@+id/nav_reports"
        android:name="com.rmj.parking_place.fragments.ReportsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_reports" />

    <!--<fragment
        android:id="@+id/nav_slideshow"
        android:name="com.rmj.parking_place.fragments.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />-->

    <fragment
        android:id="@+id/nav_map_page"
        android:name="com.rmj.parking_place.fragments.MapPageFragment"
        android:label="@string/menu_map_page"
        tools:layout="@layout/fragment_map_page" />

    <fragment
        android:id="@+id/nav_favorite_places"
        android:name="com.rmj.parking_place.fragments.favorite_places.FavoritePlacesFragment"
        android:label="@string/menu_favorite_places"
        tools:layout="@layout/fragment_map_page" />

    <fragment
        android:id="@+id/nav_reservation_and_paid_parking_places"
        android:name="com.rmj.parking_place.fragments.ReservationAndPaidParkingPlacesFragment"
        android:label="@string/menu_reservation_and_paid_parking_places"
        tools:layout="@layout/fragment_reservation_and_paid_parking_places" />
</navigation>