<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".fragments.MapPageFragment">

    <!-- The map content view -->
    <RelativeLayout
        android:id="@+id/mapContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/northPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnReserve"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_weight=".1"
                android:background="@color/colorReserve"
                android:textColor="@android:color/white"
                android:text="@string/btnReserveText"
                android:layout_marginRight="3dp" />

            <Button
                android:id="@+id/btnTake"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight=".1"
                android:background="@color/colorTake"
                android:textColor="@android:color/white"
                android:text="@string/btnTakeText"
                android:layout_marginLeft="3dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnLeaveParkingPlace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorLeaveParkingPlace"
            android:textColor="@android:color/white"
            android:visibility="gone"
            android:text="@string/btnLeaveParkingPlaceText"
            android:layout_marginTop="3dp"/>
        <TextView
            android:id="@+id/txtRemainingTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:visibility="gone"
            android:textSize="@dimen/text_size"
            android:gravity="center"/>
        <View
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent">
        </View>

        <ImageButton
            android:id="@+id/finParkingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:src="@drawable/search_parking_button" />

        <LinearLayout
            android:id="@+id/find_parking_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
        </LinearLayout>
    </LinearLayout>

    <!--
    <LinearLayout
        android:id="@+id/northPanel"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorNorthPanelBackground"
        android:visibility="gone">
            <Button
                android:id="@+id/btnReserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorReserve"
                android:textColor="@android:color/white"
                android:text="@string/btnReserveText"
                android:enabled="false"
                android:onClick="clickOnBtnReserve"/>
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtRemainingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:textSize="@dimen/text_size"/>
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnTake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTake"
                android:textColor="@android:color/white"
                android:text="@string/btnTakeText"
                android:enabled="false"
                android:onClick="clickOnBtnTake"/>
    </LinearLayout>
    -->
</FrameLayout>